# fxjurnal

./: .dockerignore  .env.example  .gitignore  Dockerfile  docker-compose.yml  main.py  manage.py  package-lock.json  package.json  pyproject.toml  tsconfig.json  vite.config.ts
config/: settings.py  urls.py
fxjurnal/: asgi.py  settings.py  urls.py  wsgi.py
static/src/: App.vue  main.ts
static/src/components/: HelloWorld.vue
templates/: base.html  index.html
